--- a/.pylintrc
+++ b/.pylintrc
@@ -290,7 +290,7 @@ max-bool-expr=5
 max-branches=30
 
 # Maximum number of locals for function / method body.
-max-locals=15
+max-locals=50
 
 # Maximum number of parents for a class (see R0901).
 max-parents=7
@@ -421,7 +421,8 @@ disable=raw-checker-failed,
         suppressed-message,
         useless-suppression,
         deprecated-pragma,
-        use-symbolic-message-instead
+        use-symbolic-message-instead,
+        logging-fstring-interpolation
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
